# flowalyzer

./: .gitignore  ACTUAL_STATE.md  CLAUDE.md  CURRENT_STATE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  basic_run.sh  build.rs
assets/config/: alignment_weights.json
assets/phonemes/: lexicon.txt
docs/current-plans/: JSON_RECIPE_ENHANCEMENTS.md  MULTILINGUAL_TRANSCRIPTION_IMPLEMENTATION_STATUS.md  PAUSE_AWARE_CHUNKING.md  PRONUNCIATION_LOGGING_PLAN.md  PRONUNCIATION_PITCH_CONTOUR_IMPLEMENTATION_STATUS.md  PRONUNCIATION_TOOL_ARCHITECTURE.md  PRONUNCIATION_TOOL_AUDIO_ONLY_REDESIGN.md  PRONUNCIATION_TOOL_IMPLEMENTATION_STATUS.md  PRONUNCIATION_TOOL_PHASE3_PLAN.md  RECORDING_AND_ANALYSIS.md  SPEED_CHANGE.md  pronunciation_tool_libraries.md
docs/tutorials/: pronunciation_dictionary_alignment.md
examples/: session_ui.rs
src/: lib.rs  main.rs  types.rs
src/audio/: assembler.rs  capture.rs  decoder.rs  encoder.rs  mod.rs  pause_detector.rs  playback.rs  resample.rs  slicer.rs
src/chunking/: accumulator.rs  mod.rs  planner.rs  spans.rs  tests.rs
src/config/: mod.rs
src/operations/: mod.rs  recipe.rs  repeat.rs  silence.rs  speed.rs
src/pronunciation/: cli.rs  mod.rs  session.rs
src/pronunciation/alignment/: dictionary.rs  dtw.rs  mod.rs  templates.rs
src/pronunciation/features/: contour.rs  mel.rs  mod.rs  (+1 more)
src/transcription/: mod.rs
src/ui/: mod.rs
tests/: alignment.rs  features.rs  features_pitch.rs  metrics.rs  session_runtime.rs  session_smoke.rs
tests/alignment/: dictionary.rs  dtw.rs
tests/ui/: session_focus.rs  session_snapshots.rs
(+17 files in other folders)
