[package]
name = "flowalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
dasp = { version = "0.11", features = ["signal", "interpolate"] }
whisper-rs = "0.15"
ssstretch = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
rodio = "0.17"

[patch.crates-io]
whisper-rs-sys = { path = "vendor/whisper-rs-sys" }
